# vuala

./: .gitignore  Lab1.ipynb  Mass Assignment.ipynb  diagrams.drawio  docker-compose.yaml  example.ipynb  history.xml  history.yaml  pyproject.toml  rust.ipynb  service.py
burp/: Cargo.toml
burp/src/: burpformat.rs  lib.rs  representation.rs
hiddenparameters/: Lab.ipynb  pyproject.toml
mock/: __init__.py  brokencrystals.py  test.py  webacademy.py
mock/massassignment/: portuguese.py  scopes.py
siteclient/: __init__.py
vuala/: __init__.py  agent.py  conclusion.py  exchange.py  output.py  test_plan.py  workflow.py
vuala/massassignment/: Notebook.ipynb  __init__.py  common.py  extract_login.py  generate_and_test.py  get_resources.py  reproduce_login.py
