[tool.poetry]
name = "vuala"
version = "0.1.0"
description = ""
authors = ["Anatol Karalkoŭ <anatol1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1"
langchain-openai = "^0.1"
langchain = "^0.2"
langchain-community = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
